fixed gap issues, added color palette, fixed footer block

--- a/style.css
+++ b/style.css
@@ -298,37 +298,3 @@ body {
     }
 }
 /* Main content styles end */
-
-/*footer styles*/
-footer {
-    background: black;
-    color: white;
-
-    padding-top: 3%;
-    padding-bottom: 10%;
-
-    text-align: center;
-
-    font-size: 12pt;
-    font-weight: 400;
-    font-family: var(--primary-font-family);
-}
-
-#menu-footer-menu {
-    padding: 0px;
-    margin: 0px;
-}
-
-.footer_menu li {
-    display: inline-block;
-}
-
-.footer_menu li > a {
-    color: var(--button-color);
-    font-size: 16pt;
-}
-
-.footer_menu li > a:visited {
-    color: var(--button-color-hover);
-}
-/*footer styles end*/
